变更包邮规则，添加用户协议 样式调整

--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -139,10 +139,10 @@
         <div class="bs-callout bs-callout-danger">
             <div class="media text-left">
                 <div class="media-left">
-                    <span class="glyphicon glyphicon-file" aria-hidden="true" style="margin-top:5px; color:white"></span>
+                    <span class="glyphicon glyphicon-file" aria-hidden="true" style="margin-top:5px; color:black"></span>
                 </div>
                 <div class="media-body">
-                   <input type="checkbox" checked/><a href="{% url 'wash_aggreement' %}">用户协议</a>
+                   <input type="checkbox" checked/><a href="{% url 'wash_aggreement' %}">&nbsp;&nbsp;用户协议</a>
                 </div>
             </div>
         </div>
