--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -95,7 +95,7 @@
                     <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-top:5px; color:red"></span>
                 </div>
                 <div class="media-body">
-                    <label style="color:red">优惠信息:{{ discount.desc }}</label>
+                    <label style="color:red">优惠信息:减免{{ not_self_discount_sum }}元</label>
                 </div>
             </div>
         </div>
