--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -88,14 +88,14 @@
                 </div>
             </div>
         </div>
-        {% if discount %}
+        {% if not_self_discount_sum != 0 %}
         <div class="bs-callout bs-callout-danger">
             <div class="media">
                 <div class="media-left">
                     <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-top:5px; color:red"></span>
                 </div>
                 <div class="media-body">
-                    <label style="color:red">优惠信息:减免{{ not_self_discount_sum }}元</label>
+                    <label style="color:red">优惠信息:减免{{ not_self_discount_sum|money_format }}元</label>
                 </div>
             </div>
         </div>
