非微信浏览器不能访问

--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -92,7 +92,7 @@
         <div class="bs-callout bs-callout-danger">
             <div class="media">
                 <div class="media-left">
-                    <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-top:5px; color:red"></span>
+                    <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-top:5px;"></span>
                 </div>
                 <div class="media-body">
                     <label style="color:red">优惠信息:减免{{ not_self_discount_sum|money_format }}元</label>
