添加配置信息

--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        {% if not_self_discount_sum != 0 %}
+        <!--{% if not_self_discount_sum != 0 %}
         <div class="bs-callout bs-callout-danger">
             <div class="media">
                 <div class="media-left">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-        {% endif %}
+        {% endif %}-->
          {% if my_discounts %}
         <div class="bs-callout bs-callout-danger">
             <div class="media">
