--- a/gather/templates/wash/user_order.html
+++ b/gather/templates/wash/user_order.html
@@ -61,7 +61,7 @@
             </div>
           {% endfor %}
           <div class="text-right" style="margin-top:10px;">
-              共{{ order.count }}件 合计:&nbsp;￥<label style="bold">{{ order.money|money_format }}</label>元(含运费￥8.00)
+              共{{ order.count }}件 合计:&nbsp;￥<label style="bold">{{ order.money|money_format }}</label>元(免邮费)
           </div>
       </li>
       <li class="list-group-item text-right">
