--- a/gather/templates/wash/manage/base.html
+++ b/gather/templates/wash/manage/base.html
@@ -150,6 +150,12 @@
 										订单详情
 									</a>
 								</li>
+								<li>
+									<a href="{% url 'manage_recharge' %}">
+										<i class="icon-double-angle-right"></i>
+										用户充值
+									</a>
+								</li>
 							</ul>
 						</li>
 					</ul><!-- /.nav-list -->
